# Analyze-a-tron-2000

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  scan_chunks.cpp  tablehash.cpp
ida/: Makefile  butil.py  create_type.py  cutil.py  dbc_naming-hexrays.py  dbc_naming-pattern.py  dbc_naming.py  dbc_namingV2.py  dbd_based_structs.py  deobfuscate.py  dump_postprocess.py  gutil.py  prefix_with_filename.py  putil.py  tcontainers.py  tdbc.py  tutil.py
ida/plugins/: AutoRenameMethod.py
postprocess_dumped_exe/: CMakeLists.txt  post_process_dumped_exe.cpp  readme.md
util/: file.cpp  file.hpp  iffchunk.cpp  iffchunk.hpp  insert_order_collections.hpp  string.cpp  string.hpp
